# aether

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
crates/aether-ae/: Cargo.toml
crates/aether-ae/src/: main.rs
crates/aether-client/: Cargo.toml
crates/aether-client/src/: chips.rs  effect.rs  grid.rs  keymap.rs  labels.rs  lib.rs  markdown.rs  picker.rs  save_as.rs  scrollbar.rs  session.rs  transport.rs  update.rs
crates/aether-client/tests/: update.rs
crates/aether-iced/: Cargo.toml
crates/aether-iced/src/: alt_filter.rs  app.rs  connection.rs  discovery.rs  editor.rs  grid.rs  input.rs  keymap.rs  lib.rs  main.rs  picker.rs  theme.rs
crates/aether-protocol/: Cargo.toml
crates/aether-protocol/src/: buffer.rs  cursor.rs  directory.rs  envelope.rs  error.rs  git.rs  handshake.rs  input.rs  lib.rs  lsp.rs  nav.rs  path.rs  picker.rs  project.rs  search.rs  settings.rs  sneak.rs  viewport.rs  workspace.rs
crates/aether-protocol/tests/: roundtrip.rs
crates/aether-server/: Cargo.toml
crates/aether-server/src/: backup.rs  brackets.rs  case.rs  config.rs  connection.rs  cursor.rs  error.rs  git.rs  grep.rs  handlers.rs  http.rs  indent.rs  lib.rs  main.rs  number.rs  picker.rs  server.rs  sneak.rs  state.rs  status.rs  surround.rs  syntax.rs  watcher.rs  workspace_index.rs  wrap.rs
crates/aether-server/src/lsp/: client.rs  config.rs  diagnostics.rs  lifecycle.rs  manager.rs  mod.rs  position.rs  process.rs  shell_env.rs  transport.rs  uri.rs
crates/aether-server/tests/: integration.rs
crates/aether-tui/: Cargo.toml
crates/aether-tui/src/: app.rs  client.rs  clipboard.rs  connection.rs  discovery.rs  keymap.rs  labels.rs  lib.rs  main.rs  overlay_input.rs  picker.rs  save_prompt.rs  scroll.rs  shell.rs  stderr_capture.rs  text_input.rs  ui.rs
crates/aether-web/: Cargo.toml
crates/aether-web/src/: lib.rs  view.rs
packaging/: Info.plist  uk.joef.Aether.desktop  uk.joef.Aether.metainfo.xml
web/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
web/src/: client.ts  clipboard.ts  help.ts  icons.ts  keymap.ts  labels.ts  main.ts  markdown.ts  modal.ts  paths.ts  picker.ts  protocol.ts  render.ts  shell.ts  text.ts  theme.css  vite-env.d.ts
