[workspace]
resolver = "2"
members = [
    "crates/aether-protocol",
    "crates/aether-server",
    "crates/aether-tui",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
aether-protocol = { path = "crates/aether-protocol" }

# Serde / JSON-RPC
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }

# Async runtime & WebSocket transport
tokio = { version = "1", features = ["rt-multi-thread", "macros", "io-util", "net", "time", "sync", "signal", "fs"] }
tokio-tungstenite = "0.24"
futures-util = "0.3"

# Diagnostics
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# CLI
clap = { version = "4", features = ["derive"] }

# Error handling
anyhow = "1"
thiserror = "1"

# Server-only
ropey = "1"
regex = "1"
tree-sitter = "0.26"
tree-sitter-rust = "0.23"
tree-sitter-md = "0.3"
tree-sitter-toml-ng = "0.7"
tree-sitter-html = "0.23"
tree-sitter-javascript = "0.25"
tree-sitter-typescript = "0.23"
tree-sitter-python = "0.25"
tree-sitter-go = "0.25"
tree-sitter-elixir = "0.3"
tree-sitter-erlang = "0.18"
tree-sitter-css = "0.25"
tree-sitter-bash = "0.25"
tree-sitter-json = "0.24"
tree-sitter-yaml = "0.7"
streaming-iterator = "0.1"
# Git integration (diff/blame). Local-only: default features (ssh/https/network) disabled so
# the build doesn't pull in openssl/libssh2 — we never talk to a remote.
git2 = { version = "0.19", default-features = false }
notify = "7"
toml = "0.8"
directories = "5"
trash = "5"
nucleo-matcher = "0.3"
ignore = "0.4"
grep-searcher = "0.1"
grep-regex = "0.1"
grep-matcher = "0.1"

# TUI-only
ratatui = "0.29"
crossterm = "0.28"
arboard = "3"
unicode-width = "0.2"
