[workspace]
resolver = "2"
members = [
    "crates/aether-protocol",
    "crates/aether-server",
    "crates/aether-tui",
    "crates/aether-client",
    "crates/aether-iced",
    "crates/aether-web",
    "crates/aether-ae",
]

[workspace.package]
version = "0.2.0-rc.1"
edition = "2021"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
aether-protocol = { path = "crates/aether-protocol" }
aether-client = { path = "crates/aether-client" }
aether-server = { path = "crates/aether-server" }
aether-tui = { path = "crates/aether-tui" }
aether-iced = { path = "crates/aether-iced" }

# Serde / JSON-RPC
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde", "js"] }

# OS entropy for the Randomize transform (explicitly password-suitable, so not `fastrand`).
getrandom = "0.3"

# Markdown (hover popovers) — parsed once in the core into an AST the shells render. Only the
# parser is needed (no HTML renderer); already present transitively via iced's markdown widget.
pulldown-cmark = { version = "0.12", default-features = false }

# Async runtime & WebSocket transport
tokio = { version = "1", features = ["rt-multi-thread", "macros", "io-util", "net", "time", "sync", "signal", "fs"] }
tokio-tungstenite = "0.29"
futures-util = "0.3"

# Diagnostics
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# CLI
clap = { version = "4", features = ["derive"] }

# Error handling
anyhow = "1"
thiserror = "2"

# Server-only
ropey = "1"
regex = "1"
tree-sitter = "0.26"
tree-sitter-rust = "0.24"
tree-sitter-md = "0.5"
tree-sitter-toml-ng = "0.7"
tree-sitter-html = "0.23"
tree-sitter-javascript = "0.25"
tree-sitter-typescript = "0.23"
tree-sitter-python = "0.25"
tree-sitter-go = "0.25"
tree-sitter-elixir = "0.3"
tree-sitter-erlang = "0.19"
tree-sitter-css = "0.25"
tree-sitter-bash = "0.25"
tree-sitter-json = "0.24"
tree-sitter-yaml = "0.7"
# Quiver grammar, tracking the upstream repo's `main` branch (the crate lives in its `tree-sitter`
# subdirectory; Cargo resolves it by package name). Cargo.lock pins the exact commit.
tree-sitter-quiver = { git = "https://github.com/joefreeman/quiver", branch = "main" }
streaming-iterator = "0.1"
# Git integration (diff/blame). Local-only: default features (ssh/https/network) disabled so
# the build doesn't pull in openssl/libssh2 — we never talk to a remote.
git2 = { version = "0.21", default-features = false }
notify = "8"
toml = "1"
directories = "6"
trash = "5"
nucleo-matcher = "0.3"
ignore = "0.4"
grep-searcher = "0.1"
grep-regex = "0.1"
grep-matcher = "0.1"

# TUI-only
ratatui = "0.30"
crossterm = "0.29"
arboard = "3"
unicode-width = "0.2"

# iced-client-only
iced = { version = "0.14", features = ["tokio", "advanced", "markdown"] }
