[package]
name = "aether-iced"
version.workspace = true
edition.workspace = true
license.workspace = true

# Dev binary while the iced client grows toward parity; once usable it folds into a
# feature-gated top-level `ae` crate alongside the TUI.
[[bin]]
name = "ae-iced"
path = "src/main.rs"

[dependencies]
aether-client = { workspace = true }
aether-protocol = { workspace = true }
serde = { workspace = true }
iced = { workspace = true }
tokio = { workspace = true }
tokio-tungstenite = { workspace = true }
futures-util = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
directories = { workspace = true }
unicode-width = { workspace = true }
