[package]
name = "aether-iced"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Aether editor — iced (native GUI) client."

[dependencies]
aether-client = { workspace = true }
aether-protocol = { workspace = true }
serde = { workspace = true }
iced = { workspace = true }
tokio = { workspace = true }
tokio-tungstenite = { workspace = true }
futures-util = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
directories = { workspace = true }
unicode-width = { workspace = true }
