[package]
name = "aether-protocol"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "JSON-RPC message types for the Aether editor protocol."

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
uuid = { workspace = true, features = ["v4", "serde"] }
