[package]
name = "aether-server"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Aether editor server daemon."

[dependencies]
aether-protocol.workspace = true

serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
uuid = { workspace = true, features = ["v4", "serde"] }

tokio = { workspace = true, features = ["process"] }
tokio-tungstenite.workspace = true
futures-util.workspace = true

tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }

clap = { workspace = true, features = ["derive"] }
anyhow.workspace = true
thiserror.workspace = true

ropey.workspace = true
regex.workspace = true
tree-sitter.workspace = true
tree-sitter-rust.workspace = true
tree-sitter-md.workspace = true
tree-sitter-toml-ng.workspace = true
tree-sitter-html.workspace = true
tree-sitter-javascript.workspace = true
tree-sitter-typescript.workspace = true
tree-sitter-python.workspace = true
tree-sitter-go.workspace = true
tree-sitter-elixir.workspace = true
tree-sitter-erlang.workspace = true
tree-sitter-css.workspace = true
tree-sitter-bash.workspace = true
tree-sitter-json.workspace = true
tree-sitter-yaml.workspace = true
streaming-iterator.workspace = true
git2.workspace = true
notify.workspace = true
toml.workspace = true
directories.workspace = true
trash.workspace = true
unicode-width.workspace = true
nucleo-matcher.workspace = true
ignore.workspace = true
grep-searcher.workspace = true
grep-regex.workspace = true
grep-matcher.workspace = true
libc = "0.2"

[dev-dependencies]
tempfile = "3"
tokio = { workspace = true, features = ["test-util"] }
git2.workspace = true
