[package]
name = "aether-tui"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Aether editor — terminal client."

[[bin]]
name = "ae"
path = "src/main.rs"

[dependencies]
aether-protocol.workspace = true

serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true

tokio.workspace = true
tokio-tungstenite.workspace = true
futures-util.workspace = true

tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }

clap = { workspace = true, features = ["derive"] }
anyhow.workspace = true

ratatui.workspace = true
crossterm = { workspace = true, features = ["event-stream"] }
arboard.workspace = true
unicode-width.workspace = true
directories = "5"
libc = "0.2"

[dev-dependencies]
tempfile = "3"
