[package]
name = "aether-tui"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Aether editor — terminal client."

[dependencies]
aether-client = { workspace = true }
aether-protocol.workspace = true

serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true

tokio.workspace = true
tokio-tungstenite.workspace = true
futures-util.workspace = true

tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }

anyhow.workspace = true

ratatui.workspace = true
crossterm = { workspace = true, features = ["event-stream"] }
arboard.workspace = true
unicode-width.workspace = true
directories.workspace = true
libc = "0.2"

[dev-dependencies]
tempfile = "3"
