[package]
name = "aether-web"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "wasm-bindgen binding shell for aether-client: the browser's seam onto the shared client core (docs/web-core.md). Keeps aether-client pure; owns every #[wasm_bindgen] and boundary DTO."

[lib]
# cdylib for the wasm artifact; rlib so the boundary logic stays unit-testable on the host target.
crate-type = ["cdylib", "rlib"]

[dependencies]
aether-client = { workspace = true }
aether-protocol = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
# Pinned to the installed `wasm-bindgen` CLI (0.2.104); the two must match exactly.
wasm-bindgen = "=0.2.104"
serde-wasm-bindgen = "0.6"
